Fix the visibility for Start button in modal close ption

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ h1 { font-family:Verdana, Geneva, Tahoma, sans-serif ;
         
     
     /* The Modal (background) */
+
 .open {
     display: none; /* Hidden by default */
     margin :20px;
@@ -55,7 +56,8 @@ h1 { font-family:Verdana, Geneva, Tahoma, sans-serif ;
     
   }
   
-  /* Modal Content/Box  W3 Schools*/
+  /* Modal Content*/
+
   .rules-content {
     background-color: rgb(131, 13, 115);
     font-size: 1em;
@@ -83,14 +85,6 @@ h1 { font-family:Verdana, Geneva, Tahoma, sans-serif ;
     cursor: pointer;
   }
   
-  /* End of W3 Schools style - adjusted */
-   
-  #start {
-    display:none;
-  }
-  
-  #username { display:none;
-  }  /* Hides the username until start is clicked*/
    
   #rules { padding:20px 0;}
 
